# bft-patterns-cryptos

./: CMakeLists.txt  README.md
src/: arguments.h  information.h  l_tree.h  main.cpp  pattern.h  replica.h  signature.h  state_machine_replication.h
src/serialized_signatures/: serialized_aggregate_signatures.h  serialized_basic_signatures.h  serialized_multi_signatures.h  serialized_signatures.h  serialized_threshold_signatures.h
src/signature_schemes/: aggregate_signatures_scheme.h  basic_signatures_scheme.h  multi_signatures_scheme.h  signature_scheme.h  threshold_signatures_scheme.h
src/signatures/: aggregate_signatures.h  basic_signatures.h  multi_signatures.h  signatures.h  threshold_signatures.h
